[package]
name = "beastie_common"
version = "0.1.0"
edition = "2021"

[features]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { path = "../../../anchor/lang", features = ["init-if-needed"] }
anchor-lang-idl-spec = { path = "../../../anchor/idl/spec" }
anchor-lang-idl = { path = "../../../anchor/idl" }
anchor-spl = { path = "../../../anchor/spl" }
#anchor-lang = "0.30.1"
#anchor-spl = "0.30.1"
spl-token = "4.0.3"
