[package]
name = "beastie"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "beastie"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
production = []

[dependencies]
#anchor-lang = { version = "0.30.1", features = ["init-if-needed"]}
#anchor-spl = "0.30.1"
grid = { path = "../grid", features = ["cpi"] }
beastie_common = { path = "../../modules/beastie_common" }
anchor-lang = { path = "../../../anchor/lang", features = ["init-if-needed"] }
anchor-lang-idl-spec = { path = "../../../anchor/idl/spec" }
anchor-lang-idl = { path = "../../../anchor/idl" }
anchor-spl = { path = "../../../anchor/spl" }
