[package]
name = "grid"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "grid"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
beastie_common = { path = "../../modules/beastie_common" }
spl-token = "4.0.3"
anchor-lang-idl-spec = "0.1.0"
anchor-lang-idl = { version = "0.1.1", features = ["build"] }
